plugins {
    id 'java'
    id 'application'
    id 'idea'
    id 'org.springframework.boot' version '2.5.4'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'org.asciidoctor.convert' version '1.5.8'
    id 'org.owasp.dependencycheck' version '6.3.1'
}

springBoot {
    mainClassName = 'de.senatov.reservatio.SpringBootAppMain'
}

group = 'de.senatov'
version = '0.0.15-SNAPSHOT'
description = 'room-reservation'
sourceCompatibility = '16'
targetCompatibility = '16'

compileJava {
    options.incremental = true
    options.fork = true
    options.failOnError = false
    options.compilerArgs += ["--enable-preview"]
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    gradlePluginPortal()
    maven { url "https://repo.maven.apache.org/maven2" }
}


ext {
    set('snippetsDir', file("build/generated-snippets"))
}

dependencies {
    annotationProcessor 'org.projectlombok:lombok-maven-plugin:1.18.20.0'
    compileOnly 'org.projectlombok:lombok-maven-plugin:1.18.20.0'
    ext['slf4j.version'] = '1.7.20'
    implementation "javax.servlet:javax.servlet-api"
    implementation "org.primefaces:primefaces:10.0.0"
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
    implementation 'com.google.guava:guava:30.1.1-jre'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'javax.persistence:javax.persistence-api:2.2'
    implementation 'javax.enterprise:cdi-api:2.0-PFD2'
    implementation 'javax.inject:javax.inject:1'
    implementation 'javax.persistence:javax.persistence-api:2.2'
    implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.apache.tomcat.embed:tomcat-embed-core'
    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
    implementation 'org.apiguardian:apiguardian-api:1.1.2'
    implementation 'org.checkerframework:checker-qual:3.18.0'
    implementation 'org.glassfish.hk2.external:javax.inject:2.5.0-b62'
    implementation 'org.glassfish:javax.faces:2.4.0'
    implementation 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final'
    implementation 'org.hibernate.validator:hibernate-validator-annotation-processor:7.0.1.Final'
    implementation 'org.hibernate.validator:hibernate-validator:7.0.1.Final'
    implementation 'org.hibernate:hibernate-core:5.5.7.Final'
    implementation 'org.json:json:20210307'
    implementation 'org.primefaces.extensions:primefaces-extensions-parent:10.0.5'
    implementation 'org.primefaces.extensions:primefaces-selenium-components:10.0.0'
    implementation 'org.springdoc:springdoc-openapi-ui:1.5.10'
    implementation 'org.springdoc:springdoc-openapi-webmvc-core:1.5.10'
    implementation 'org.springframework.boot:spring-boot-autoconfigure'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.data:spring-data-commons'
    implementation 'org.springframework.data:spring-data-jpa'
    implementation 'org.springframework.security:spring-security-config'
    implementation 'org.springframework.security:spring-security-core'
    implementation 'org.springframework.security:spring-security-web'
    implementation 'org.springframework.webflow:spring-faces:2.5.1.RELEASE'
    implementation 'org.springframework:spring-beans'
    implementation 'org.springframework:spring-context'
    implementation 'org.springframework:spring-core'
    implementation 'org.springframework:spring-jdbc'
    implementation 'org.springframework:spring-tx'
    implementation 'org.springframework:spring-web'
    implementation 'org.springframework:spring-webmvc'
    implementation platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'org.springframework.boot:spring-boot-devtools'
    testAnnotationProcessor 'org.projectlombok:lombok-maven-plugin:1.18.20.0'
    testCompileOnly 'org.projectlombok:lombok-maven-plugin:1.18.20.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-test'
    testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework:spring-test'
}

configurations.all {
    exclude group: "com.vaadin.external.google", module: "android-json"
}


test {
    outputs.dir snippetsDir
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

asciidoctor {
    inputs.dir snippetsDir
    dependsOn test
}
